--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Inicio",
-      "item": "https://www.mvvnatural.com/"
+      "item": "https://www.mvvnaturales.com/"
     }
   ]
 };
