--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -21,13 +21,13 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Inicio",
-      "item": "https://www.mvvnatural.com/"
+      "item": "https://www.mvvnaturales.com/"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Productos",
-      "item": "https://www.mvvnatural.com/productos"
+      "item": "https://www.mvvnaturales.com/productos"
     }
   ]
 };
