--- a/src/pages/blog/como-acelerar-metabolismo-naturalmente.astro
+++ b/src/pages/blog/como-acelerar-metabolismo-naturalmente.astro
@@ -26,7 +26,7 @@ const articleSchema = {
     }
   },
   "datePublished": "2025-01-13",
-  "dateModified": "2025-01-13",
+  "dateModified": new Date().toISOString().split('T')[0],
   "image": "https://images.unsplash.com/photo-1498837167922-ddd27525d352?w=1200&h=800&fit=crop"
 };
 ---
