--- a/src/pages/blog/funcionan-pastillas-para-bajar-de-peso.astro
+++ b/src/pages/blog/funcionan-pastillas-para-bajar-de-peso.astro
@@ -26,7 +26,7 @@ const articleSchema = {
     }
   },
   "datePublished": "2025-01-13",
-  "dateModified": "2025-01-13",
+  "dateModified": new Date().toISOString().split('T')[0],
   "image": "https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=1200&h=800&fit=crop"
 };
 ---
