--- a/src/pages/blog/mejores-suplementos-naturales-bajar-peso-mexico.astro
+++ b/src/pages/blog/mejores-suplementos-naturales-bajar-peso-mexico.astro
@@ -26,7 +26,7 @@ const articleSchema = {
     }
   },
   "datePublished": "2025-01-13",
-  "dateModified": "2025-01-13",
+  "dateModified": new Date().toISOString().split('T')[0],
   "image": "https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=1200&h=800&fit=crop"
 };
 ---
