Optimize hero assets for desktop LCP

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,6 +68,10 @@ const siteName = 'MVV Natural';
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={image.startsWith('http') ? image : new URL(image, Astro.site).toString()} />
     
+    <!-- External Asset Preconnects -->
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
+    <link rel="dns-prefetch" href="https://res.cloudinary.com" />
+
     <!-- Google Fonts - Optimized for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
