--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,8 @@
             src="https://res.cloudinary.com/dsulhqvza/image/upload/v1761550208/mvvnatural_pbzwrl.png"
             alt="MVV Natural"
             class="h-10 w-auto md:h-12"
+            width="500"
+            height="500"
           />
         </a>
         <div class="flex items-center gap-3">
